--- a/contact.html
+++ b/contact.html
@@ -1,34 +1,57 @@
 <!doctype html>
+
 <html>
 	<head>
+
 		<title>Gato Miau Cards</title>
 		<link rel="stylesheet" href="./css/style.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	</head>
-	<body>
-		<div class="home">
-			<div class="nav">
-				<div>Company Name</div>
-				<ul>
-					<li><a href="./index.html">Home</a></li>
-					<li><a href="./about.html">About</a></li>
-					<li><a href="./services.html">Services</a></li>
-					<li><a href="./contact.html">Contact</a></li>
-				</ul>
-			</div>
-			<div class="contact">
-				<div class="contact-content">
-					<h1>Contate-nos</h1>
-					<div class="address-holder">
-						<p>
-							Avenida Engenheiro Roberto Mange <br/>
-							310, Vila Maria<br/>
-							Campinas, São Paulo<br/>
-						</p>
-						<h4>+55(19)988161769</h4>
-						<h4>Para negocios, envie-nos um e-mail para: marsula@gmail.com</h4>
-					</div>
-				</div>
-			</div>
-		</div>	
-	</body>
+<header class="container">
+    <div class="row">
+      <h1 class="col-sm-4"><a href="./index.html">Gato Miau Cards</a></h1>
+      <nav class="col-sm-8 text-right">
+        <p><a href="./about.html">Sobre a empresa</a></p>
+        <p><a href="./services.html">Catalogo</a></p>
+        <p><a href="./contact.html">Contato</a></p>
+      </nav>
+    </div>
+  </header>
+  <div class="backgroundimage">
+    <div class="container">
+      <div class="row text-center">
+        <h2>Contate-nos</h2>
+		<div class="address-holder">
+			<p>
+			Avenida Engenheiro Roberto Mange <br/>
+			310, Vila Maria<br/>
+			Campinas, Sao Paulo<br/>
+			</p>
+			<h4>+55(19)988161769</h4>
+			<h4>Para negocios, envie-nos um e-mail para: marsula@gmail.com</h4>
+		</div>
+      </div>
+    </div>
+  </div>
+  <footer class="container">
+    <div class="row">
+      <p class="col-sm-4">&copy; 2018, Jose Gabriel Alves</p>
+      <ul class="col-sm-8">
+        <li class="col-sm-1">
+            <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/twitter.svg">
+        </li>
+        <li class="col-sm-1">
+           <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/facebook.svg">
+        </li>
+        <li class="col-sm-1">
+           <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/instagram.svg">
+        </li>
+        <li class="col-sm-1">
+  <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/medium.svg">
+        </li>
+      </ul>
+    </div>
+  </footer>
+ </body>
 </html>
