--- a/services.html
+++ b/services.html
@@ -1,46 +1,73 @@
+
 <!doctype html>
+
 <html>
 	<head>
+
 		<title>Gato Miau Cards</title>
 		<link rel="stylesheet" href="./css/style.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	</head>
-	<body>
-		<div class="home">
-			<div class="nav">
-				<div>Company Name</div>
-				<ul>
-					<li><a href="./index.html">Home</a></li>
-					<li><a href="./about.html">About</a></li>
-					<li><a href="./services.html">Services</a></li>
-					<li><a href="./contact.html">Contact</a></li>
-				</ul>
-			</div>
-			<div class="services">
-				<div class="services-content">
-					<h1>Servicos</h1>
-					<div class="card-container">
-						<ul>
-							<li>
-								<img src="https://via.placeholder.com/200X130"/>
-								<p> Aqui esta nosso portfolio de cartoes personalizados que foram produzidos pela nossa empresa.</p>
-							</li>
-							<li>
-								<img src="https://via.placeholder.com/200X130"/>
-								<p>Placeholder para os cartões</p>
-							</li>
-							<li>
-								<img src="https://via.placeholder.com/200X130"/>
-								<p>Placeholdr para cartões</p>
-							</li>
-							<li>
-								<img src="https://via.placeholder.com/200X130"/>
-								<p>Placeholder para cartões</p>
-							</li>
-						</ul>
-					</div>
-				</div>
+<header class="container">
+    <div class="row">
+      <h1 class="col-sm-4"><a href="./index.html">Gato Miau Cards</a></h1>
+      <nav class="col-sm-8 text-right">
+        <p><a href="./about.html">Sobre a empresa</a></p>
+        <p><a href="./services.html">Catalogo</a></p>
+        <p><a href="./contact.html">Contato</a></p>
+      </nav>
+    </div>
+  </header>
+  <div class="backgroundimage">
+    <div class="container">
+      <div class="row text-center">
+        <h1>Servicos</h1>
+      </div>
 
-			</div>
-		</div>	
-	</body>
+    </div>
+    
+  	</div>
+  	<section class="container">
+    	<div class="row">
+      	<figure class="col-sm-6">
+        	<p>kitchen</p>
+        	<img src="https://via.placeholder.com/200X130"/>
+    	</figure>
+    	<figure class="col-sm-6">
+        	<p>woodwork</p>
+        	<img src="https://via.placeholder.com/200X130"/>
+      	</figure>
+   	 	</div>
+    	<div class="row">
+      	<figure class="col-sm-6">
+        	<p>gifts</p>
+        	<img src="https://via.placeholder.com/200X130"/>
+      	</figure>
+      	<figure class="col-sm-6">
+        	<p>antiques</p>
+        	<img src="https://via.placeholder.com/200X130"/>
+      	</figure>
+    	</div>
+    </section>
+  <footer class="container">
+    <div class="row">
+      <p class="col-sm-4">&copy; 2018, Jose Gabriel Alves</p>
+      <ul class="col-sm-8">
+        <li class="col-sm-1">
+            <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/twitter.svg">
+        </li>
+        <li class="col-sm-1">
+           <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/facebook.svg">
+        </li>
+        <li class="col-sm-1">
+           <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/instagram.svg">
+        </li>
+        <li class="col-sm-1">
+  <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/medium.svg">
+        </li>
+      </ul>
+    </div>
+  </footer>
+ </body>
 </html>
